tests/baselines/reference/commaOperatorWithoutOperand.errors.txt
==== tests/cases/compiler/commaOperatorWithoutOperand.ts (12 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    // Expect to have compiler errors
    // Missing the second operand
    (ANY, );
          ~
!!! commaOperatorWithoutOperand.ts(9,7): error TS1005: 'expression' expected.
    (BOOLEAN, );
              ~
!!! commaOperatorWithoutOperand.ts(10,11): error TS1005: 'expression' expected.
    (NUMBER, );
             ~
!!! commaOperatorWithoutOperand.ts(11,10): error TS1005: 'expression' expected.
    (STRING, );
             ~
!!! commaOperatorWithoutOperand.ts(12,10): error TS1005: 'expression' expected.
    (OBJECT, );
             ~
!!! commaOperatorWithoutOperand.ts(13,10): error TS1005: 'expression' expected.
    
    // Missing the first operand
    (, ANY);
     ~
!!! commaOperatorWithoutOperand.ts(16,2): error TS1005: 'expression' expected.
    (, BOOLEAN);
     ~
!!! commaOperatorWithoutOperand.ts(17,2): error TS1005: 'expression' expected.
    (, NUMBER);
     ~
!!! commaOperatorWithoutOperand.ts(18,2): error TS1005: 'expression' expected.
    (, STRING);
     ~
!!! commaOperatorWithoutOperand.ts(19,2): error TS1005: 'expression' expected.
    (, OBJECT);
     ~
!!! commaOperatorWithoutOperand.ts(20,2): error TS1005: 'expression' expected.
    
    // Missing all operands
    ( , );
      ~
!!! commaOperatorWithoutOperand.ts(23,3): error TS1005: 'expression' expected.
        ~
!!! commaOperatorWithoutOperand.ts(23,5): error TS1005: 'expression' expected.